src/Pages/Parceiros/Parceiros.css
.partners {
    width: 100%;
    display: flex;
    flex-direction: column;
    justify-content: center;
    height: var(--page-height);
    margin-bottom: 10em;
    margin-top: 10em;
    padding-top: 10%;
}

.partnersTile {
    background-color: rgba(164, 149, 235, 0.25) 9%, ;
    width: 90%;
    padding-left: 2%;
    padding-top: 2%;
    padding-right: 2%;
    padding-bottom: 2%;
    border-radius: 80px;
    align-self: center;
}

.partnersTitle {
    margin-top: 10%;
}

.conteinerCard {
    margin: auto;
    padding-top: 0;
    padding-bottom: 5%;
}

@media screen and (min-width: 1024px) {
    .staff {
        display: flex;
        flex-direction: row;
        justify-content: center;
        gap: 4rem;
    }
}

@media screen and (max-width: 1366px) {

    .partnersTile {
        width: 90%;
    }

    .conteinerCard {
        padding-top: 0;
        padding-bottom: 5%;
    }
}


@media screen and (max-width: 1280px) {
    .partnersTile {
        padding-bottom: 5%;
    }

    .partners {
        padding-top: 10%;
    }

    .conteinerCard {
        padding-top: 5%;
        padding-bottom: 3%;
    }
}

@media screen and (max-width :1024px) {
    .conteinerCard {
        padding-bottom: 0;
    }

    .partners {
        padding-top: 14%;
    }

    .conteinerCard {
        padding-top: 0;
    }
    
    
}



@media screen and (max-width: 912px) {
    .partnersTile {
        padding-top: 6%;
    }
}


.partners-landscape {
    height: unset !important;
}

@media screen and (max-width: 540px) {
    .partnersTile {
        padding-top: 0;
    }

    .conteinerCard {
        padding-top: 5%;
    }
}

@media screen and (max-width: 430px) {
    .partnersTile {
        padding-top: 0;
    }

    .conteinerCard {
        padding-top: 0;
    }
}


@media screen and (max-width: 390px) {
    .partnersTile {
        padding-top: 5%;
        padding-bottom: 40%;
    }

    .conteinerCard {
        padding-top: 10%;
    }
}

@media screen and (max-width: 375px) {
    .partnersTile {
        padding-bottom: 10%;
    }

    .conteinerCard {
        padding-top: 5%;
    }
}

@media screen and (max-width: 300px) {
    .partners {
        margin-bottom: 20vh;
        padding-bottom: 100%;
        padding-top: 0;
    }

    .partnersTile {
        width: 80%;
        padding-top: 0%;
    }


    .conteinerCard {
        padding-top: 120%;
    }

}

@media screen and (max-width:260px) {
    .partners {
        margin-top: 300vh;
        margin-bottom: 300vh;
        margin-left: 4%;
    }

}

